--- a/views/date.erb
+++ b/views/date.erb
@@ -1,9 +1,2 @@
 <h1>Today</h1>
-<% t = DateTime.now %>
-<% day = t.strftime("%A") %>
-<% m = t.strftime("%B") %>
-<% d = t.strftime("%d") %>
-<% y = t.strftime("%Y") %>
-<p>
-	The date is <%= day %>, <%= m %> <%= d %>, <%= y %> 
-</p>
+<p> The date is <%= Date.today.strftime("%A, %B %d, %Y") %></p>
