--- a/views/date.erb
+++ b/views/date.erb
@@ -1,9 +1,3 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <h1>Today</h1>
-</head>
-<body>
-  <%= "The date is #{Date.today.strftime("%A, %B %d, %Y")}" %>
-</body>
-</html>
+<h1>Today</h1>
+<p>The date is <%= Date.today.strftime("%A, %B %d, %Y") %></p>
