--- a/views/date.erb
+++ b/views/date.erb
@@ -1,3 +1,3 @@
 <h1>Today</h1>
-<% time = Time.new %>
-<p><%="The date is " + time.strftime("%A") + ', ' + time.strftime("%B") + ' ' + time.strftime("%d") + ', ' + time.strftime("%Y")%> </p>
+<% date = Time.now %>
+<p>The date is <%= date.strftime("%A, %B %d, %Y") %></p>
