--- a/views/date.erb
+++ b/views/date.erb
@@ -5,6 +5,6 @@
   <title>Date</title>
 </head>
 <body>
-  <p><%= "The date is #{Time.now.strftime("%A")}, #{Time.now.strftime("%B")} #{Time.now.strftime("%d")}, #{Time.now.year}" %></p>
+  <p><%= "The date is #{Time.now.strftime("%A, %B %d, %Y")}" %></p>
 </body>
 </html>
