--- a/views/date.erb
+++ b/views/date.erb
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
-<% t = Time.now %>
-The date is <%= t.strftime("%A, %B %d, %Y") %>
+<html> The date is:
+<%=Time.now.strftime("%A, %B %d, %Y")%>
 </html>
