--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,13 +1,9 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+<title></title>
 </head>
 <body>
-
-  <% name = "Joe" %>
-
-
-  <%= <h1>"Goodbye " + "#{name}"<h1> %>
-</body>
-</html> -->
+<% @name = "Joe" %>
+<h1><%="Goodbye #{@name}" %></h1>
+</body></html>
