--- a/views/date.erb
+++ b/views/date.erb
@@ -5,9 +5,9 @@
   <title>hello</title>
 </head>
 <body>
-  <% @d = Time.new %>
-  <% @date = @d.today.strftime('%a %d %b %Y') %>
-  <%=<h1>"The date is" + @date</h1><%>
+  <% d = Time.new %>
+  <% date = d.strftime("%A, %B %d, %Y") %>
+  <h1><%="The date is" + date %></h1>
 </body>
 </html>
   <html>
