--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Hello World</title>
-    </head>
-    <body>
-        <h1><%= "Goodbye Joe" %></h1>
+<% name = "Joe" %>
+    <h1>Goodbye <%= name %></h1>
 
-    </body>
-</html>
