--- a/views/date.erb
+++ b/views/date.erb
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My First View!!</title>
+        <title>Date Page</title>
     </head>
     <body>
-      
-     <p> The date is <%= Date.today.strftime("%A, %B %d, %Y") %></p>
-    </body>
+        <h1>Today</h1>
+        <%date = Date.today.strftime("%A, %B %d, %Y")%>
+        <h1>The date is  <%=date%></h1>
+        <% else %>
+      </body>
 </html>
