--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My First View!!</title>
+        <title>Goodbye Page</title>
     </head>
     <body>
-        <% name = "Joe" %>
-        <h1>Goodbye <%= name %></h1>
+        <%name = "Joe" %>
+        <h1>Goodbye <%=name%></h1>
     </body>
 </html>
