--- a/views/hello.erb
+++ b/views/hello.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My First View!!</title>
+        <title>Hello Page</title>
     </head>
     <body>
-        <h1>"Hello World"</h1>
+        <h1>Hello World</h1>
     </body>
 </html>
