--- a/views/date.erb
+++ b/views/date.erb
@@ -4,7 +4,7 @@
         <title>My First View!!</title>
     </head>
     <body>
-
-        <p>The date is <%= Date.today.strftime('%A, %B %d, %G') %></p>
+        <h2>The date is:<h2>
+        <h3><%= Date.today.strftime('%A, %B %d, %G') %></h3>
     </body>
 </html>
