--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,9 +1,2 @@
-<!DOCTYPE html>
-<html>
-    <head>
-    </head>
-    <body>
-      <% name = "Joe" %>
-        <h1><%= "Goodbye #{name}" %></h1>
-    </body>
-</html>
+<% name = "Joe" %>
+<h1>Goodbye <%= name %></h1>
