--- a/views/hello.erb
+++ b/views/hello.erb
@@ -1,6 +1,16 @@
-<form action="/hello" method="POST">
-  <h1>Hello World</h1>
-</form>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <form action="/hello" method="POST">
+      <h1>Hello World</h1>
+    </form>
+  </body>
+</html>
+
 
 
 <!-- <form action="/posts" method="POST">
