--- a/views/date.erb
+++ b/views/date.erb
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>date</title>
+  <title>Sinatra Views Lab II</title>
 </head>
 <body>
   <h1>Today </h1>
-  The date is <%= TIME.now.strftime('%A, %B %d, %Y') %>
-  <p>
-  </p>
+  <p>The date is <%= Time.now.strftime('%A, %B %d, %Y') %></p>
 </body>
 </html>
