--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>goodbye</title>
+  <title>Sinatra Views Lab II</title>
 </head>
 <body>
-  <h1>Goodbye Joe </h1>
+  <h1>Goodbye Joe</h1>
 </body>
 </html>
