--- a/views/hello.erb
+++ b/views/hello.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hi</title>
+  <title>Sinatra Views Lab II</title>
 </head>
 <body>
   <h1>Hello World </h1>
