--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,10 +1,7 @@
 <!-- 2. Create another template called `goodbye.erb` in `views`.
 In this view, use ERB tags to create a variable `name`. This variable should store the name `Joe`.
 Then, using ERB tags, say "Goodbye Joe" in an `h1` tag. This should get rendered via a GET `/goodbye`
-route by your `App` controller in `app.rb`.
-<head>goodbye</title>
-</head>
--->
+route by your `App` controller in `app.rb`.-->
 <html>
   <head>goodbye</head>
   <body>
