--- a/views/date.erb
+++ b/views/date.erb
@@ -7,6 +7,6 @@
   <body>
     <h1>Today</h1>
     <% time = DateTime.now %>
-    <p><%= "The date is #{time.strftime("%A, %B %e, %Y, %T")}" %></p>
+    <p><%= "The date is #{time.strftime("%A, %B %d, %Y")}" %></p>
   </body>
 </html>
