--- a/views/date.erb
+++ b/views/date.erb
@@ -1,4 +1,3 @@
 <h1>Today</h1>
-<% t = DateTime.now %>
 
-<p>The date is <%= t.strftime('%A') %>, <%= t.strftime('%B') %> <%= t.strftime('%d') %>, <%= t.strftime('%Y') %></p>
+<p>The date is <%= DateTime.now.strftime("%A, %B %d, %Y") %></p>
