--- a/views/date.erb
+++ b/views/date.erb
@@ -1,2 +1,3 @@
-<h1> <%Today = Date.today.strftime("%A, %B %d, %Y")%> </h1>
-<p> <%= The date is%> <%= Today%> </p>
+
+<h1> Today: </h1>
+<p> The date is <%=Date.today.strftime("%A, %B %d, %Y") %> </p>
