--- a/views/date.erb
+++ b/views/date.erb
@@ -5,7 +5,6 @@
 
   <body>
     <h1>Today</h1>
-    <% t = DateTime.now %>
-    <p> The date is <%= t.strftime("%A, %B %d, %Y")%> </p>
+    <p> The date is <%= Date.today.strftime("%A, %B %d, %Y")%> </p>
   </body>
 </html>
