--- a/views/date.erb
+++ b/views/date.erb
@@ -1,3 +1,1 @@
-<h1>Today</h1>
-<% t = DateTime.now %>
-<%= t.strftime("The date is %A, %B %d, %Y")%>
+<%=  DateTime.now.strftime("The date is %A, %B %d, %Y")%>
