--- a/views/date.erb
+++ b/views/date.erb
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-  </head>
-
-  <body>
-    <h1>Hello World</h1>
-  </body>
-</html>
+<p> The date is <%= Date.today.strftime("%A, %B %d, %Y") %></p>
