--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-  </head>
 
-  <body>
-    <h1>Hello World</h1>
-  </body>
-</html>
+<% name = "Joe" %>
+<h1>Goodbye <%= name%></h1>
