--- a/views/date.erb
+++ b/views/date.erb
@@ -4,6 +4,5 @@
     <head>
       <h1>Today</h1>
     </head>
-      <%= date = Date.Time.new(2018,3,21,10,50,25) %>
-      <p>The date is </p>
+      <p>The date is <%=Date.today.strftime("%A, %B %d, %Y")%> </p>
 </html>
