--- a/views/date.erb
+++ b/views/date.erb
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -5,6 +7,6 @@
     <title></title>
   </head>
   <body>
-    <p>The date is <%Today%></p>
+    <p>The date is <%=Date.today.strftime("%A, %B %d, %Y")%></p>
   </body>
 </html>
