--- a/views/date.erb
+++ b/views/date.erb
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <% name = "Joe" %>
-    <h1>Goodbye <%= name %></h1>
+    <% d = DateTime.now %>
+    <h1>The date is <%= d.strftime("%A, %B %d, %Y") %></h1>
   </body>
 </html>
