--- a/views/date.erb
+++ b/views/date.erb
@@ -1,6 +1,6 @@
 <%require 'date'%>
 
-<%today = Date.today.strftime(%A, %B, %e, %Y)%>
+<%today = Date.today.strftime('%A, %B %e, %Y')%>
 
 <h1> Today</h1>
-<p> The date is <%=today%></p>
+<p> The date is <%= today %></p>
