--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,5 +1,2 @@
-<!DOCTYPE html>
-<body>
-  <% name = "Joe" %>
-  <h1>Goodbye <%=name%> </h1>
-</body>
+<% name = "Joe " %>
+<h1><%= "Goodbye #{name}" %></h1>
