--- a/views/date.erb
+++ b/views/date.erb
@@ -1,6 +1,8 @@
-<!DOCTYPE html>
-<body>
-    <h1> Today </h1>
-    <p>The date is <%=Time.now.strftime("%A, %B %d, %Y")%></p>
+<h1> Today </h1>
+
+<p> "The date is "<%= Date.today.strftime("%A, %B %d, %Y") %></p>
+
+
+<!-- <p>The date is <%=Time.now.strftime("%A, %B %d, %Y")%></p> -->
     <!-- The date is Wednesday, November 18, 2015 -->
-</body>
+<!-- strftime method can parse Day, month, year. etc -->
