--- a/views/date.erb
+++ b/views/date.erb
@@ -1,3 +1,2 @@
-
-<% date=DateTime.now %>
-<p><%= "The date is " + date %></p>
+<h1><%="The date is"%></h1>
+<p><%= Date.today.strftime("%A, %B %d, %Y")%></p>
