--- a/views/date.erb
+++ b/views/date.erb
@@ -7,7 +7,7 @@
   <body>
     <h1>Today</h1>
 
-    <p> The date is <%= Date.today.strftime("%A, %B %d, %Y").to_s %></p>
+    <p> The date is <%= Date.today.strftime("%A, %B %d, %Y") %></p>
 
   </body>
 </html>
