--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Goodbye Joe</title>
-    </head>
+<head>
+    <title>Goodbye Joe</title>
+</head>
     <body>
-      <% cookie = Joe %>
-      <h1><%= "Goodbye #{cookie}" %><h1>
+      <% cookie = "Joe" %>
+      <h1><Goodbye <%= cookie %></h1>
     </body>
 </html
