--- a/views/date.erb
+++ b/views/date.erb
@@ -2,7 +2,7 @@
 <html>
   <head></head>
   <body>
-    <%today = Date.today.strftime %>
+    <%today = Date.today.strftime("%A, %B %d, %Y") %>
     <p>The date is <%= today %></p>
   </body>
 </html>
