--- a/views/date.erb
+++ b/views/date.erb
@@ -6,14 +6,15 @@
 
   </head>
   <body>
-    <p><%d = DateTime.now%></p>
+    <!--<p><%d = DateTime.now%></p>
     <p><%month_name = Date::MONTHNAMES[d.month]%></p>
     <p><%day_name = Date::DAYNAMES[d.wday]%></p>
     <p><%date_num = d.day%></p>
     <p><%year = d.year%></p>
 
-    <p>The date is <%=day_name%>, <%=month_name%> <%=date_num%>, <%=year%>. </p>
+    <p>The date is <%=day_name%>, <%=month_name%> <%=date_num%>, <%=year%>. </p>-->
 
+    <p><%=Date.today.strftime("The date is %A, %B %d, %Y.")%></p>
 
 
   </body>
