--- a/views/date.erb
+++ b/views/date.erb
@@ -5,8 +5,6 @@
 	</head>
 	<body>
 		<h1>Today</h1>
-
-		The date is <%= Date.today.strftime("%A, %B %d, %Y")%>
-
+			<p>The date is <%= Date.today.strftime("%A, %B %d, %Y")%></p>
 	</body>
 </html>
