--- a/views/date.erb
+++ b/views/date.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <h1>Today</h1>
-  <% t = Time.now %>
-  <% time = t.strftime("The date is %A, %B %d, %Y") %>
-  <p><%= time %></p>
+  <% datetime = Time.now %>
+  <% datetime = t.strftime("The date is %A, %B %d, %Y") %>
+  <p><%= datetime %></p>
 </html>
