--- a/views/date.erb
+++ b/views/date.erb
@@ -4,7 +4,7 @@
         <title>Date Page</title>
     </head>
     <body>
-        <% date = Time.now.strftime(%B,%d %>
+        <% date = Time.now.strftime('%A,%B,%d,%Y') %>
         <h1>The date is <%= date %></h1>
     </body>
 </html>
