--- a/views/date.erb
+++ b/views/date.erb
@@ -1,8 +1,8 @@
-date.erb
+
 <h1>"Today"</h1>
 <!-- <p>"The date is <%= DateTime: 2015-11-18"%></p> -->
 
 
-<p>"The date is<%= Time.now.strftime(%A, %B, %d, %Y)"" %></p>
+<p>The date is<%="Time.now.strftime("%A, %B, %d, %Y)"%></p>
 
 <%end%>
