--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,6 @@
 <h1>"Hello World"</h1>
 <h1>"Goodbye Joe"</h1>
 <h1>"Today"</h1>
-<p>"The date is <%= DateTime: 2015-11-18"%></p>
+<p>The date is<%= Time.now.strftime("%A, %B %d, %Y") %></p>
+
 <%end%>
