--- a/views/date.erb
+++ b/views/date.erb
@@ -1,8 +1,10 @@
 <!DOCTYPE html> 
 
-<h1><%= Today %></h1>
+ <body>
+  <h1><%= "Today" %></h1>
+  <% time = Time.now %> 
+   <p><%= "The date is " + time.strftime("%A") + ", " + time.strftime("%B") + " " + time.strftime("%d") + ", " + time.strftime("%Y") + "." %></p>
 
-<% time = Time.now %> 
-<p><%= "The date is" + time.strftime("%A")"," + time.month + time.date"," + time.year %></p>
-
+   
+ </body>
 </html>
