--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -4,6 +4,8 @@
     <title>Goodbye</title>
   </head>
   <body>
-    
+    <% name = "Joe" %> <!-- Remember: the code between < % and % > is Ruby code, not necessarily a string! 
+    Also, I can't seem to put the < and % (or % and >) together without breaking the comment...-->
+    <h1><%= "Goodbye #{name}" %></h1>
   </body>
 </html>
