--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,6 +1,5 @@
 <!DOCTYPE html> 
 <html>
-  <body>
-    <h1>Goodbye Joe</h1>
-  </body>
+  <% name = "Joe" %>
+  <h1>Goodbye <%= name %></h1>
 </html>
